--- a/vagrantfile
+++ b/vagrantfile
@@ -13,7 +13,14 @@ Vagrant.configure("2") do |config|
     config.vm.network "private_network", ip: "192.168.33.10"
     config.vm.hostname = "scotchbox"
     config.vm.provision :shell, path: "vagrant_bootstrap.sh"
-    config.vm.synced_folder "./", "/var/www/public", :mount_options => ["dmode=777", "fmode=666"]
+    config.vm.provision "shell", inline: <<-SHELL
+      mv /var/www/public /var/www/html
+      sudo sed -i s,/var/www/public,/var/www/html,g /etc/apache2/sites-available/000-default.conf
+      sudo sed -i s,/var/www/public,/var/www/html,g /etc/apache2/sites-available/scotchbox.local.conf
+      sudo service apache2 restart
+SHELL
+    config.vm.synced_folder "./", "/var/www/", :mount_options => ["dmode=777", "fmode=666"]
+
 
     config.trigger.after :up do
       run "node ./launch_browser.js"
