--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "grunt-webpack": "^1.0.11",
     "hostile": "^1.0.2",
     "node-sass": "^3.4.2",
-    "open": "0.0.5",
+    "opn": "^4.0.2",
     "q": "^1.4.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
